--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
     
     
     background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgb(4, 26, 0) 1%, rgb(65, 142, 46) 28%, rgba(47,74,29,1) 51%, rgb(25, 92, 45) 70%, rgb(17, 43, 0) 100%, rgba(0,0,0,1) 139%); 
+    background: linear-gradient(90deg, rgb(4, 26, 0) 1%, rgb(65, 142, 46) 28%,rgb(99, 134, 0) 100%, rgba(47,74,29,1) 100%, rgb(25, 92, 45) 100%, rgb(24, 61, 0) 100%, rgba(0,0,0,1) 1%); 
     
 
-    background-size: 10000% 400%;
+    background-size: 100000% 400%;
     padding-left: 25%;
     padding-right: 25%;
     color: white;
@@ -29,6 +29,13 @@ p1{
     
 }
 
+a{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: white;
+}
+
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -40,3 +47,39 @@ p1{
 		background-position: 0% 50%;
 	}
 }
+
+
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+
+  overflow: hidden;
+
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #384600;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  opacity: 80%;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ffffff;
+  color: black;
+  opacity: 30%;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #000000;
+  color: white;
+  opacity: 30%;
+}
+
