--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
+.img1{
+width: 320px;
+height: 240px;
+}
+.downloadbutton {
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg,rgba(0,0,0,1) 1%,rgb(24, 61, 0) 100%,rgb(25, 92, 45) 100%, rgba(47,74,29,1) 100%, rgba(47,74,29,1) 100%,rgb(99, 134, 0) 100%, rgb(65, 142, 46) 28%,rgb(4, 26, 0) 1%);
+  background-size: 100000% 400%;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+ 
+  backdrop-filter: blur(10px);
+  text-align: center;
+  z-index: 100000000000000;
+  font-size: 16px;
+  font-family: 'Segoe UI';
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
 
+  animation: gradient 5s ease infinite;
+}
+.downloadbutton:hover {opacity: 1}
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
@@ -20,6 +43,9 @@ body {
 @media only screen and (max-width: 50000px) {
   .hello{
     font-size: 90px;
+  }
+  .prtext{
+    font-size: 45px;
   }
   .helloAbout{
     font-size: 85px;
