--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
-.img1{
-width: 320px;
-height: 240px;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
+.img1 {
+  width: 320px;
+  height: 240px;
 }
 .fixed-bottom {
   position: fixed;
@@ -9,120 +9,125 @@ height: 240px;
   bottom: 0;
   left: 0;
   z-index: 1030;
- 
 }
 .downloadbutton {
-  background: rgb(0,0,0);
-  background: linear-gradient(90deg,rgba(0,0,0,1) 1%,rgb(24, 61, 0) 100%,rgb(25, 92, 45) 100%, rgba(47,74,29,1) 100%, rgba(47,74,29,1) 100%,rgb(99, 134, 0) 100%, rgb(65, 142, 46) 28%,rgb(4, 26, 0) 1%);
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 1%,
+    rgb(24, 61, 0) 100%,
+    rgb(25, 92, 45) 100%,
+    rgba(47, 74, 29, 1) 100%,
+    rgba(47, 74, 29, 1) 100%,
+    rgb(99, 134, 0) 100%,
+    rgb(65, 142, 46) 28%,
+    rgb(4, 26, 0) 1%
+  );
   background-size: 100000% 400%;
   border: none;
   color: white;
   padding: 16px 32px;
- 
+
   backdrop-filter: blur(10px);
   text-align: center;
   z-index: 100000000000000;
   font-size: 16px;
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   margin: 4px 2px;
   opacity: 0.6;
   transition: 0.3s;
 
   animation: gradient 5s ease infinite;
 }
-.downloadbutton:hover {opacity: 1}
+.downloadbutton:hover {
+  opacity: 1;
+}
 body {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-    
-    
-    
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgb(4, 26, 0) 1%, rgb(65, 142, 46) 28%,rgb(99, 134, 0) 100%, rgba(47,74,29,1) 100%, rgb(25, 92, 45) 100%, rgb(24, 61, 0) 100%, rgba(0,0,0,1) 1%); 
-    
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
-    background-size: 100000% 400%;
-    padding-left: 25%;
-    padding-right: 25%;
-    color: white;
-    text-align: center;
-    animation: gradient 15s ease infinite;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgb(4, 26, 0) 1%,
+    rgb(65, 142, 46) 28%,
+    rgb(99, 134, 0) 100%,
+    rgba(47, 74, 29, 1) 100%,
+    rgb(25, 92, 45) 100%,
+    rgb(24, 61, 0) 100%,
+    rgba(0, 0, 0, 1) 1%
+  );
+
+  background-size: 100000% 400%;
+  padding-left: 25%;
+  padding-right: 25%;
+  color: white;
+  text-align: center;
+  animation: gradient 15s ease infinite;
 }
 @media only screen and (max-width: 50000px) {
-  .hello{
+  .hello {
     font-size: 90px;
   }
-  .prtext{
+  .prtext {
     font-size: 45px;
   }
-  .helloAbout{
+  .helloAbout {
     font-size: 85px;
   }
-  .gifT{
+  .gifT {
     opacity: 30%;
     visibility: visible;
   }
-  .gifAbouts{
-    
+  .gifAbouts {
     visibility: visible;
   }
- /*desktop version*/
+  /*desktop version*/
 }
 
 @media only screen and (max-width: 580px) {
-  .hello{
+  .hello {
     font-size: 25px;
   }
-  .helloAbout{
+  .helloAbout {
     font-size: 25px;
   }
-  .gifT{
+  .gifT {
     opacity: 30%;
     visibility: hidden;
   }
-  .gifAbouts{
-    
+  .gifAbouts {
     visibility: hidden;
   }
- 
-   /*mobile version*/
-  
+
+  /*mobile version*/
 }
 
-
-p1{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 5px;
-    
+p1 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 5px;
 }
 
-a{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    color: white;
+a {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  color: white;
 }
-
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
-
-
-
 
 /* Add a black background color to the top navigation */
 .topnav {
-
   overflow: hidden;
-
 }
 
 /* Style the links inside the navigation bar */
@@ -149,4 +154,3 @@ a{
   color: white;
   opacity: 30%;
 }
-
